src/test/ui/const-generics/raw-ptr-const-param.min.stderr
error: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param.rs:7:23
   |
LL | struct Const<const P: *const u32>;
   |                       ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to previous error

